@@ -6,6 +6,7 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     - sqrtint(n)                Integer square root of n
     - rootint(n,k)              Integer k-th root of n
+    - is_prime_power(n)         Returns k if n=p^k for p a prime.
 
 
 0.39 2016-07-24
